--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,7 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.android.support:recyclerview-v7:24.2.1'
     provided 'org.glassfish:javax.annotation:10.0-b28'
+    compile 'org.parceler:parceler-api:1.1.6'
+    annotationProcessor 'org.parceler:parceler:1.1.6'
 
 }
