--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,6 @@ dependencies {
     provided 'org.glassfish:javax.annotation:10.0-b28'
     compile 'org.parceler:parceler-api:1.1.6'
     annotationProcessor 'org.parceler:parceler:1.1.6'
+    compile 'com.android.support:customtabs:24.2.1'
 
 }
