--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -17,6 +18,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+}
+
+ext {
+    supportLibVersion = '24.2.1'
 }
 
 dependencies {
@@ -38,5 +47,12 @@ dependencies {
     compile 'org.parceler:parceler-api:1.1.6'
     annotationProcessor 'org.parceler:parceler:1.1.6'
     compile 'com.android.support:customtabs:24.2.1'
+    compile 'com.github.bumptech.glide:glide:3.5.2'
+    compile 'com.android.support:support-v4:24.2.1'
+    compile 'jp.wasabeef:glide-transformations:2.0.0'
+    compile "com.android.support:support-vector-drawable:${supportLibVersion}"
+    compile "com.android.support:animated-vector-drawable:${supportLibVersion}"
 
 }
+apply plugin: 'com.android.application'
+apply plugin: 'me.tatarka.retrolambda'
